完成修改密码接口的封装